syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.market.grpc";
option java_outer_classname = "LogoProto";

package market;

// ====== REQUESTS ======

message LogoRequest {
  string symbol = 1;
}

// ====== RESPONSES ======

message LogoMetaData {
  string symbol = 1;
  string exchange = 5;
}

message LogoResponse {
  LogoMetaData meta = 1;
  string url = 2;
  string logo_base = 3;
  string logo_quote = 4;
}

// ====== SERVICE ======

service LogoService {
  rpc GetLogo(LogoRequest) returns (LogoResponse);
}
